# neural-network-cuda

./: .gitignore  CMakeLists.txt  main.cpp
CPU/: CMakeLists.txt
GPU/: CMakeLists.txt  linear.cu  linear.h  main.cu
test/: test_main.cpp
